--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
   </head>
 
   <body>
-    <!-- ===========navbar======================= -->
+    <!-- ===========navbar=======================-->
     <!-- Deepak,anchal,awanish -->
+	<!-- test1 -->
     <header>
       <a href="#" class="logo">GR<span>i</span>ZLA</a>
       <div id="menu-bar" class="fas fa-bars"></div>
