--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
 
     <!-- ======================slider Section=============================== -->
    <!-- Deepak,anchal,awanish -->
+   <!-- test -->
+   
     <section class="main">
       <div class="slideshow-container">
         <div class="mySlides fade">
@@ -148,6 +150,8 @@
         </div>
       </div>
     </section>
+
+  
 
     <!-- ===================scripts========================================= -->
 
