--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
     </section>
 
     <!-- ===================scripts========================================= -->
-
+    <!-- hardik test ssh -->
     <script src="script.js"></script>
   </body>
 </html>
