--- a/index.html
+++ b/index.html
@@ -156,6 +156,7 @@
 
     <!-- ===================scripts========================================= -->
     <!-- hardik test ssh -->
+    <!-- no rule test -->
     <script src="script.js"></script>
   </body>
 </html>
