--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             
             style="width: 100%" />
           <div class="text">
-            <h1 class="text_head">Welcome To <span>Grizla</span></h1>
+            <h1 class="text_head">Welcome To<br> <span>Grizla</span></h1>
             <h1 class="text_head">Technologies</h1>
             <div class="slider_btn">
               <a href="" class="aboutus_btn">About Us</a>
