--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <!-- ===========navbar=======================-->
     <!-- Deepak,anchal,awanish -->
 	<!-- test1 -->
+  <!-- text -->
     <header>
       <a href="#" class="logo">GR<span>i</span>ZLA</a>
       <div id="menu-bar" class="fas fa-bars"></div>
