--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+     <!--(for our_service) Option 1: Bootstrap Bundle with Popper -->
+     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
+     integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
+     crossorigin="anonymous"></script>
 
     <!-- fontawsome link -->
   <script src="https://kit.fontawesome.com/f1fe65a302.js" crossorigin="anonymous"></script>
@@ -118,7 +122,74 @@
         </div>
       </div>
     </section>
+    <!-- our Services -->
+    <div class="container-fluid">
+      <h1 class="text-center mt-5 display-3 fw-bold">Services We  <span class="theme-text">Provide</span></h1>
+      <hr class="mx-auto mb-5 w-25">
+      <div class="row mb-5">
+          <div class="col-12 col-sm-6 col-md-3 m-auto">
+              <!-- card starts here -->
+              <div class="card shadow">
+                  <img src="images/it service.jpeg" alt="" class="card-img-top">
+                  <div class="card-body">
+                      <h3 class="text-center">IT Services</h3>
+                      <hr class="mx-auto w-75">
+                      <p>
+                          Information technology service management is the activities that are performed by an organization to design, 
+                          build, deliver, operate and control information technology services offered to customers.</p>
+                  </div>
+              </div>
+              <!-- card ends here -->
+          </div>
+          <!-- col ends here -->
+          <div class="col-12 col-sm-6 col-md-3 m-auto">
+              <!-- card starts here -->
+              <div class="card shadow">
+                  <img src="images/dm.jpeg" alt="" class="card-img-top">
+                  <div class="card-body">
+                      <h3 class="text-center">Digital Marketing</h3>
+                      <hr class="mx-auto w-75">
+                      <p>
+                          Digital marketing, also called online marketing, is the promotion of brands to connect with potential customers using the internet and other forms of digital communication. This includes not only email, 
+                      </p>
+                  </div>
+              </div>
+              <!-- card ends here -->
+          </div>
+          <!-- col ends here -->
+          <div class="col-12 col-sm-6 col-md-3 m-auto">
+              <!-- card starts here -->
+              <div class="card shadow">
+                  <img src="images/g.jpeg" alt="" class="card-img-top">
+                  <div class="card-body">
+                      <h3 class="text-center">Gaming</h3>
+                      <hr class="mx-auto w-75">
+                      <p>
+                          Video games, also known as computer games, are electronic games that involves interaction with a user interface or input device – such as a joystick, controller, 
+                          keyboard, or motion sensing device   </p>
+                  </div>
+              </div>
+              <!-- card ends here -->
+          </div>
+          <!-- col ends here -->
+          <div class="col-12 col-sm-6 col-md-3 m-auto">
+              <!-- card starts here -->
+              <div class="card shadow" >
+                  <img src="images/sq.jpeg" alt="" class="card-img-top">
     
+                  <div class="card-body">
+                      <h3 class="text-center">Social Media</h3>
+                      <hr class="mx-auto w-75">
+                      <p>
+                          Social media are interactive technologies that facilitate the creation and sharing of 
+                          information, ideas, interests, and other forms of expression through virtual communities and networks
+                  </div>
+              </div>
+              <!-- card ends here -->
+          </div>
+          <!-- col ends here -->
+      </div>
+  </div>
 
 
       <!-- profile -> hardik -->
