--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@
           />
           <p class="team-member-name">John Doe</p>
           <p class="team-member-role">Web Developer</p>
+          <i class="fa-brands fa-github"></i>
         </div>
         <div class="team-member">
           <img
@@ -147,7 +148,7 @@
           <p class="team-member-role">Web Developer</p>
         </div>
       </div>
-    </section>
+    </section> -->
 
     <!-- ===================scripts========================================= -->
 
