added whychoose us but not responsive

--- a/index.html
+++ b/index.html
@@ -140,6 +140,62 @@
       </div>
     </section>
     <div class="seperater"></div>
+
+
+
+    <section class="whychooseus">
+      
+      <div class="why-choose-us-container">
+        <!-- <hr class="separator" /> -->
+        <h3 class="why-choose-us-header">Why <span>Choose</span> Us</h3>
+        <div class="why-choose-us-grid">
+          <div class="card c1">
+            <img class="img" src="/images/whychooseusimg1.jpeg" />
+            <div class="card-content">
+              <p class="title">24/7 Service</p>
+              <p class="main-text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex
+                quaerat deserunt ratione magnam possimus,
+              </p>
+            </div>
+          </div>
+          <div class="card c1">
+            <img class="img" src="/images/whychooseusimg2.jpeg" />
+            <div>
+              <p class="title">High Quality Product</p>
+              <p class="main-text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex
+                quaerat deserunt ratione magnam possimus,
+              </p>
+            </div>
+          </div>
+          <div class="card c1">
+            <img class="img" src="/images/whychooseusimg33.jpg" />
+            <div>
+              <p class="title">Experienced Employees</p>
+              <p class="main-text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex
+                quaerat deserunt ratione magnam possimus, ad esse
+              </p>
+            </div>
+          </div>
+          <div class="card c1">
+            <img class="img" src="/images/whychooseusimg5.jpeg" />
+            <div>
+              <p class="title">On time delivery</p>
+              <p class="main-text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex
+                quaerat deserunt ratione magnam possimus,
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <div class="seperater"></div>
+
+
+
     <!-- profile -> hardik -->
     <section id="tema">
       <p class="team_profile_header">Our perfect&nbsp;<span> team</span></p>
