--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
       <a href="#" class="logo">GR<span>i</span>ZLA</a>
       <div id="menu-bar" class="fas fa-bars"></div>
       <nav class="navbar1">
-        <a href="#">About</a>
+        <a href="#about">About</a>
         <a href="#">Services</a>
-        <a href="#">Project</a>
-        <a href="#">Team</a>
+        <a href="#project-view">Project</a>
+        <a href="#tema">Team</a>
         <a href="#">Contact</a>
       </nav>
     </header>
@@ -322,7 +322,7 @@
     <div class="seperater2"></div>
 
     <!-- Project => Viraj,Arpit,Arya-->
-    <section class="">
+    <section id="project-view">
       <div class="project-section">
         <div class="project-container">
           <div class="project-container-header" data-wow-delay="0.1s">
