--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
 
     <!-- web icon -->
     <link rel="shortcut icon" href="images/logo.jpg" type="image/x-icon" />
+     
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+   
     <title>Grizla Technologies</title>
 </head>
 <body>
