--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
       <div class="team_membes">
         <div class="team_member_details">
           <div class="profile_img">
-            <img src="https://pps.whatsapp.net/v/t61.24694-24/307826455_1574654356287356_8988752861448054880_n.jpg?ccb=11-4&oh=01_AdQx5bg7T9CTix4p5k_b14jGwSp7i6DyHb4gulRBrq1sKA&oe=6388A82B" alt="profile photo">
+            <img src="images/p1.jpg" alt="profile photo">
           </div>
           <div class="details_con">
             <h1>Hrithik Yadav</h1>
@@ -239,7 +239,7 @@
         </div>
         <div class="team_member_details">
           <div class="profile_img">
-            <img src="https://pps.whatsapp.net/v/t61.24694-24/309470289_463823822438141_2067693641590879101_n.jpg?ccb=11-4&oh=01_AdRQNl6axn72CWdSIeDkOl8Sp9ltU3DLL7YE2WORmBy8Ug&oe=6388AED8" alt="profile photo">
+            <img src="images/p2.jpg" alt="profile photo">
           </div>
           <div class="details_con">
             <h1>Sahil Khochre</h1>
@@ -255,7 +255,7 @@
         </div>
         <div class="team_member_details">
           <div class="profile_img">
-            <img src="https://pps.whatsapp.net/v/t61.24694-24/310354622_1144654006147233_8717267450183628715_n.jpg?ccb=11-4&oh=01_AdRcuSBf-YZGM1o7zd3IlTNvbdbNqBHBJ8grCGlLYPVJug&oe=6388B832" alt="profile photo">
+            <img src="images/p3.jpg" alt="profile photo">
           </div>
           <div class="details_con">
             <h1>Shreyas Wavhal</h1>
