--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
     </section>
 
 
-    <!-- Project => Viraj,Arpit,Arya-->
+    <!--# Project => Viraj,Arpit,Arya-->
     <section class="">
       <div class="project-section">
         <div class="project-container">
