--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -286,9 +287,9 @@
         </div>
       </div>
     </section>
-
-
-    <!-- Footer => Viraj,Arpit,Arya-->
+    
+    
+    <!--# Footer => Viraj,Arpit,Arya-->
     <footer class="footer">
       <div class="main-footer">
           <div class="main-footer-1">
@@ -350,7 +351,9 @@
       <div class="main-footer-copyright">
           <p>&copy; Grizla Tech., All Right Reserved. Designed By @Team Grizla</p>
       </div>
-  </footer>
+    </footer>
+  
+
     <!-- ===================scripts========================================= -->
 
     <!-- Viraj -->
