--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
       <!-- profile -> hardik -->
     <section id="team">
       <!-- <p class="team_profile_header">Our&nbsp;<span> team</span> </p> -->
-      <h1 class="heading">Our <span> Team </span></h1>
+      <h1 class="heading">Meet Our<span> Founders</span></h1>
       <div class="team_membes">
         <div class="team_member_details">
           <div class="profile_img">
